--- a/css/Style.css
+++ b/css/Style.css
@@ -1,18 +1,18 @@
-
 @import url('../css/fonts.css');
 
 
-html, body{
+html,
+body {
     margin: 0%;
     box-sizing: border-box;
     overflow-x: hidden;
 }
 
-:root{
+:root {
 
     /*      Theme colors        */
     --text-gray: #3f4954;
-    --text-light : #686666da;
+    --text-light: #686666da;
     --bg-color: #0f0f0f;
     --white: #ffffff;
     --midnight: #104f55;
@@ -23,44 +23,44 @@ html, body{
     /*      theme font-family   */
     --Abel: 'Abel', cursive;
     --Anton: 'Anton', cursive;
-    --Josefin : 'Josefin', cursive;
+    --Josefin: 'Josefin', cursive;
     --Lexend: 'Lexend', cursive;
-    --Livvic : 'Livvic', cursive;
+    --Livvic: 'Livvic', cursive;
 }
 
 
 /* ---------------- Global Classes ---------------*/
 
-a{
+a {
     text-decoration: none;
     color: var(--text-gray);
 }
 
-.flex-row{
+.flex-row {
     display: flex;
-    flex-direction: row;    
+    flex-direction: row;
     flex-wrap: wrap;
 }
 
-ul{
+ul {
     list-style-type: none;
 }
 
-h1{
+h1 {
     font-family: var(--Lexend);
     font-size: 2.5rem;
 }
 
-h2{
+h2 {
     font-family: var(--Lexend);
 }
 
-h3{
+h3 {
     font-family: var(--Abel);
     font-size: 1.3rem;
 }
 
-button.btn{
+button.btn {
     border: none;
     border-radius: 2rem;
     padding: 1rem 3rem;
@@ -69,19 +69,19 @@ button.btn{
     cursor: pointer;
 }
 
-span{
+span {
     font-family: var(--Abel);
 }
 
-.container{
+.container {
     margin: 0 5vw;
 }
 
-.text-gray{
+.text-gray {
     color: var(--text-gray);
 }
 
-p{
+p {
     font-family: var(--Lexend);
     color: var(--text-light);
 }
@@ -90,7 +90,7 @@ p{
 
 /* --------------- navbar ----------------- */
 
-.nav{
+.nav {
     background: white;
     padding: 0 2rem;
     height: 0rem;
@@ -99,11 +99,11 @@ p{
     transition: height 1s ease-in-out;
 }
 
-.nav .nav-menu{    
+.nav .nav-menu {
     justify-content: space-between;
 }
 
-.nav .toggle-collapse{
+.nav .toggle-collapse {
     position: absolute;
     top: 0%;
     width: 90%;
@@ -111,27 +111,27 @@ p{
     display: none;
 }
 
-.nav .toggle-collapse .toggle-icons{
+.nav .toggle-collapse .toggle-icons {
     display: flex;
     justify-content: flex-end;
     padding: 1.7rem 0;
 }
 
-.nav .toggle-collapse .toggle-icons i{
+.nav .toggle-collapse .toggle-icons i {
     font-size: 1.4rem;
     color: var(--text-gray);
 }
 
-.collapse{
+.collapse {
     height: 30rem;
 }
 
-.nav .nav-items{
+.nav .nav-items {
     display: flex;
     margin: 0;
 }
 
-.nav .nav-items .nav-link{
+.nav .nav-items .nav-link {
     padding: 1.6rem 1rem;
     font-size: 1.1rem;
     position: relative;
@@ -139,15 +139,15 @@ p{
     font-size: 1.1rem;
 }
 
-.nav .nav-items .nav-link:hover{
+.nav .nav-items .nav-link:hover {
     background-color: var(--midnight);
 }
 
-.nav .nav-items .nav-link:hover a{
+.nav .nav-items .nav-link:hover a {
     color: var(--white);
 }
 
-.nav .nav-brand a{
+.nav .nav-brand a {
     font-size: 1.6rem;
     padding: 1rem 0;
     display: block;
@@ -155,15 +155,15 @@ p{
     font-size: 1.6rem;
 }
 
-.nav .social{
+.nav .social {
     padding: 1.4rem 0
 }
 
-.nav .social i{
+.nav .social i {
     padding: 0 .2rem;
 }
 
-.nav .social i:hover{
+.nav .social i:hover {
     color: #a1c4cf;
 }
 
@@ -173,53 +173,111 @@ p{
 /* ----------------- Main Content----------- */
 
 /* --------------- Site title ---------------- */
-main .site-title{
+
+main .site-title {
     background: url('../assets/period-end-of-sentence.jpg');
     background-size: cover;
-    height: 110vh;
+    height: 78vh;
     display: flex;
     justify-content: center;
 }
 
-main .site-title .site-background{
+main .site-title .site-background {
     padding-top: 10rem;
     text-align: center;
     color: var(--white);
 }
 
-main .site-title h1, h3{
+main .site-title h1,
+h3 {
     margin: .3rem;
 }
 
-main .site-title .btn{
+main .site-title .btn {
     margin: 1.8rem;
     background: var(--sky);
 }
 
-main .site-title .btn:hover{
+main .site-title .btn:hover {
     background: transparent;
     border: 1px solid var(--white);
     color: var(--white);
+}
+
+
+/* Media queries for responsiveness */
+
+
+@media (max-width: 575px) {
+    .site-background {
+        padding: 10px;
+    }
+
+    h1 {
+        font-size: 26px;
+        line-height: 1.4;
+    }
+
+    p.description {
+        display: none;
+        /* Hide the <p> tag on smaller screens */
+    }
+}
+
+
+@media (min-width: 576px) and (max-width: 767px) {
+    h1 {
+        font-size: 30px;
+        line-height: 1.4;
+    }
+}
+
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .site-title {
+        padding: 30px 10px;
+    }
+
+    .site-background {
+        padding: 15px;
+    }
+
+    h1 {
+        font-size: 32px;
+        line-height: 1.3;
+    }
+}
+
+
+@media (min-width: 992px) {
+    .site-title {
+        padding: 50px 20px;
+    }
+
+    .site-background {
+        padding: 20px;
+    }
 }
 
 /* --------x------ Site title --------x------- */
 
 /* --------------- Blog Carousel ------------ */
 
-main .blog{
-    background: url('../assets/Abract01.png');
+main .blog {
+    /* background: url('../assets/Abract01.png'); */
     background-repeat: no-repeat;
     background-position: right;
-    height: 100vh;
+    height: 73vh;
     width: 100%;
     background-size: 65%;
+    padding-bottom: 10px;
 }
 
-main .blog .blog-post{
+main .blog .blog-post {
     padding-top: 6rem;
 }
 
-main .blog-post .blog-content{
+main .blog-post .blog-content {
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -228,40 +286,40 @@ main .blog-post .blog-content{
     box-shadow: 0 15px 20px rgba(0, 0, 0, 0.2);
 }
 
-main .blog-content .blog-title{
+main .blog-content .blog-title {
     padding: 2rem 0;
 }
 
-main .blog-content .btn-blog{
+main .blog-content .btn-blog {
     padding: .7rem 2rem;
     background: var(--sky);
     margin: .5rem;
 }
 
-main .blog-content span{
+main .blog-content span {
     display: block;
 }
 
-section .container .owl-nav{
-    position: absolute;
+section .container .owl-nav {
+    position: relative;
     top: 0%;
     margin: 0 auto;
     width: 100%;
 }
 
 .owl-nav .owl-prev .owl-nav-prev,
-.owl-nav .owl-next .owl-nav-next{
+.owl-nav .owl-next .owl-nav-next {
     color: var(--text-gray);
     background: transparent;
     font-size: 2rem;
 }
 
-.owl-theme .owl-nav [class*='owl-']:hover{
+.owl-theme .owl-nav [class*='owl-']:hover {
     background: transparent;
     color: var(--midnight);
 }
 
-.owl-theme .owl-nav [class*='owl-']{
+.owl-theme .owl-nav [class*='owl-'] {
     outline: none;
 }
 
@@ -270,21 +328,22 @@ section .container .owl-nav{
 
 /* ---------------- Site Content ----------------*/
 
-main .site-content{
+main .site-content {
     display: grid;
     grid-template-columns: 70% 30%;
 }
 
-main .post-content{
-    width: 100%;    
+main .post-content {
+    width: 100%;
 }
 
-main .site-content .post-content > .post-image, .post-title{
+main .site-content .post-content>.post-image,
+.post-title {
     padding: 1rem 2rem;
     position: relative;
 }
 
-main .site-content .post-content > .post-image .post-info{
+main .site-content .post-content>.post-image .post-info {
     background: var(--sky);
     padding: 1rem;
     position: absolute;
@@ -293,54 +352,54 @@ main .site-content .post-content > .post-image .post-info{
     border-radius: 3rem;
 }
 
-main .site-content .post-content > .post-image > div{
+main .site-content .post-content>.post-image>div {
     overflow: hidden;
 }
 
-main .site-content .post-content > .post-image .img{
+main .site-content .post-content>.post-image .img {
     width: 100%;
-    transition: all 1s ease;
+    transition: all .5s ease;
 }
 
-main .site-content .post-content > .post-image .img:hover{
+main .site-content .post-content>.post-image .img:hover {
     transform: scale(1.3);
 }
 
-main .site-content .post-content > .post-image .post-info span{
+main .site-content .post-content>.post-image .post-info span {
     margin: 0 .5rem;
 }
 
-main .post-content .post-title a{
+main .post-content .post-title a {
     font-family: var(--Anton);
     font-size: 1.5rem;
 }
 
-.description{
+.description {
     color: aliceblue;
     width: auto;
     margin: 0px 250px;
 }
 
-.site-content .post-content .post-title .post-btn{
+.site-content .post-content .post-title .post-btn {
     border-radius: 0;
     padding: .7rem 1.5rem;
     background: var(--sky);
 }
 
-.site-content .pagination{
+.site-content .pagination {
     justify-content: center;
     color: var(--text-gray);
     margin: 4rem 0;
 }
 
-.site-content .pagination a{
+.site-content .pagination a {
     padding: .6rem .9rem;
     border-radius: 2rem;
     margin: 0 .3rem;
     font-family: var(--Lexend);
 }
 
-.site-content .pagination .pages{
+.site-content .pagination .pages {
     background: var(--text-gray);
     color: var(--white);
 }
@@ -350,11 +409,11 @@ main .post-content .post-title a{
 
 /* --------------- Sidebar ----------------------- */
 
-.site-content > .sidebar .category-list{
-    font-family: var(--Livvic);   
+.site-content>.sidebar .category-list {
+    font-family: var(--Livvic);
 }
 
-.site-content > .sidebar .category-list .list-items{
+.site-content>.sidebar .category-list .list-items {
     background: var(--sky);
     padding: .4rem 1rem;
     margin: .8rem 0;
@@ -364,25 +423,25 @@ main .post-content .post-title a{
     justify-content: space-between;
 }
 
-.site-content > .sidebar .category-list .list-items a{
-    color:  black;
+.site-content>.sidebar .category-list .list-items a {
+    color: black;
 }
 
 
 
-.site-content .sidebar .popular-post .post-content{
+.site-content .sidebar .popular-post .post-content {
     padding: 1rem 0;
     background-color: #fff;
-	box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     margin: 20px 0px;
     border-radius: 2%;
 }
 
-.site-content .sidebar .popular-post h2{
+.site-content .sidebar .popular-post h2 {
     padding-top: 0rem;
 }
 
-.site-content .sidebar .popular-post .post-info{
+.site-content .sidebar .popular-post .post-info {
     padding: .4rem .1rem !important;
     bottom: 0rem !important;
     left: 1.5rem !important;
@@ -390,19 +449,19 @@ main .post-content .post-title a{
     background: white !important;
 }
 
-.site-content .sidebar .popular-post .post-title a{
+.site-content .sidebar .popular-post .post-title a {
     font-size: 1.5rem;
 }
 
-.site-content .sidebar .newsletter{
+.site-content .sidebar .newsletter {
     padding-top: 10rem;
 }
 
-.site-content .sidebar .newsletter .form-element{
+.site-content .sidebar .newsletter .form-element {
     padding: .5rem 2rem;
 }
 
-.site-content .sidebar .newsletter .input-element{
+.site-content .sidebar .newsletter .input-element {
     width: 80%;
     height: 1.9rem;
     padding: .3rem .5rem;
@@ -410,18 +469,18 @@ main .post-content .post-title a{
     font-size: 1rem;
 }
 
-.site-content .sidebar .newsletter .form-btn{
+.site-content .sidebar .newsletter .form-btn {
     border-radius: 0;
     padding: .8rem 32%;
     margin: 1rem 0;
     background: var(--sky);
 }
 
-.site-content .sidebar .popular-tags{
+.site-content .sidebar .popular-tags {
     padding: 5rem 0;
 }
 
-.site-content .sidebar .popular-tags .tags .tag{
+.site-content .sidebar .popular-tags .tags .tag {
     background: var(--sky);
     padding: .4rem 1rem;
     border-radius: 3rem;
@@ -435,10 +494,10 @@ main .post-content .post-title a{
 
 /* --------------------Forms--------------------- */
 
-.sidebar .forms .form1{
+.sidebar .forms .form1 {
     background-color: rgb(39, 35, 35);
     height: 400px;
-    width:450px;
+    width: 450px;
     border-radius: 5%;
 }
 
@@ -447,33 +506,33 @@ main .post-content .post-title a{
 
 /* ----------------- Footer --------------------- */
 
-footer.footer{
+footer.footer {
     height: 100%;
     background: var(--bg-color);
     position: relative;
 }
 
-footer.footer .container{
+footer.footer .container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
 }
 
-footer.footer .container > div{
+footer.footer .container>div {
     flex-grow: 1;
     flex-basis: 0;
     padding: 3rem .9rem;
 }
 
-footer.footer .container h2{
+footer.footer .container h2 {
     color: var(--white);
 }
 
-footer.footer .newsletter .form-element{
+footer.footer .newsletter .form-element {
     background: black;
     display: inline-block;
 }
 
-footer.footer .newsletter .form-element input{
+footer.footer .newsletter .form-element input {
     padding: .5rem .7rem;
     border: none;
     background: transparent;
@@ -483,44 +542,44 @@ footer.footer .newsletter .form-element input{
     width: 74%;
 }
 
-footer.footer .newsletter .form-element span{
+footer.footer .newsletter .form-element span {
     background: var(--sky);
     padding: .5rem .7rem;
     cursor: pointer;
 }
 
-footer.footer .instagram div > img{
+footer.footer .instagram div>img {
     display: inline-block;
     width: 25%;
     height: 50%;
     margin: .3rem .4rem;
 }
 
-footer.footer .follow div i{
+footer.footer .follow div i {
     color: var(--white);
     padding: 0 .4rem;
 }
 
-footer.footer .rights{
+footer.footer .rights {
     justify-content: center;
     font-family: var(--Josefin);
 }
 
-footer.footer .rights h4 a{
+footer.footer .rights h4 a {
     color: var(--white);
 }
 
-footer.footer .move-up{
+footer.footer .move-up {
     position: absolute;
     right: 6%;
     top: 50%;
 }
 
-footer.footer .move-up span{
+footer.footer .move-up span {
     color: var(--midnight);
 }
 
-footer.footer .move-up span:hover{
+footer.footer .move-up span:hover {
     color: var(--white);
     cursor: pointer;
 }
@@ -529,18 +588,18 @@ footer.footer .move-up span:hover{
 
 /*              Viewport less then or equal to 1130px            */
 
-@media only screen and (max-width: 1130px){
-    .site-content .post-content > .post-image .post-info{
+@media only screen and (max-width: 1130px) {
+    .site-content .post-content>.post-image .post-info {
         left: 2rem !important;
         bottom: 1.2rem !important;
         border-radius: 0% !important;
     }
 
-    .site-content .sidebar .popular-post .post-info{
+    .site-content .sidebar .popular-post .post-info {
         display: none !important;
     }
 
-    footer.footer .container{
+    footer.footer .container {
         grid-template-columns: repeat(2, 1fr);
     }
 
@@ -551,20 +610,22 @@ footer.footer .move-up span:hover{
 
 /*              Viewport less then or equal to 750px            */
 
-@media only screen and (max-width: 750px){
-    .nav .nav-menu, .nav .nav-items{
+@media only screen and (max-width: 750px) {
+
+    .nav .nav-menu,
+    .nav .nav-items {
         flex-direction: column;
     }
 
-    .nav .toggle-collapse{
+    .nav .toggle-collapse {
         display: initial;
     }
 
-    main .site-content{
+    main .site-content {
         grid-template-columns: 100%;
     }
 
-    footer.footer .container{
+    footer.footer .container {
         grid-template-columns: repeat(1, 1fr);
     }
 
@@ -576,25 +637,25 @@ footer.footer .move-up span:hover{
 
 /*              Viewport less then or equal to 520px            */
 
-@media only screen and (max-width: 520px){
-    main .blog{
-        height: 125vh;
+@media only screen and (max-width: 520px) {
+    main .blog {
+        height: 70vh;
     }
 
-    .site-content .post-content > .post-image .post-info{
+    .site-content .post-content>.post-image .post-info {
         display: none;
     }
 
-    footer.footer .container > div{
-        padding:  1rem .9rem !important;
+    footer.footer .container>div {
+        padding: 1rem .9rem !important;
     }
 
-    footer .rights{
+    footer .rights {
         padding: 0 1.4rem;
         text-align: center;
     }
 
-    nav .toggle-collapse{
+    nav .toggle-collapse {
         width: 80% !important;
     }
 
